# orobas-core

./: .env.dev  .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml
orobas-backend/: .env  Cargo.toml  README.md
orobas-backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
orobas-backend/src/database/: mod.rs
orobas-backend/src/plugin/: mod.rs  plugin.rs  plugin_manager.rs
orobas-frontend/: .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.dev.js
orobas-frontend/public/: index.html
orobas-frontend/src/: index.tsx
orobas-frontend/src/app/: App.tsx
orobas-frontend/src/components/DarkModeSwitch/: DarkModeSwitch.tsx  index.ts
orobas-frontend/src/components/Navbar/: Navbar.tsx
orobas-frontend/src/components/Sidebar/: CoreSidebar.tsx  DocumentationSidebar.tsx  Sidebar.tsx  SidebarItem.tsx  SidebarItemGroup.tsx
orobas-frontend/src/routes/: index.ts
orobas-frontend/webpack/: webpack.aliases.js  webpack.helpers.js  webpack.plugins.js  webpack.rules.js
orobas-utils/: .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
orobas-utils/src/: index.ts  style.css
orobas-utils/src/components/: index.ts
orobas-utils/src/hooks/: useTheme.tsx
orobas-utils/src/provider/: ThemeProvider.tsx
orobas-utils/src/themes/: DefaultTheme.ts  Dracula.ts  index.ts  types.ts
orobas-utils/src/utils/: index.ts
plugins/hello-world-plugin/: plugin.toml
plugins/hello-world-plugin/backend/: Cargo.toml  build.rs
scripts/: db-health-check-dev.sh
(+159 files in other folders)
